fix overlapping of search input and search bar

--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -32,12 +32,11 @@
   border-radius: 25px;
   background-color: #fff;
   color: #333;
-  transition: background-color 0.3s ease, transform 0.3s ease;
+  transition: background-color 0.3s ease;
 }
 
 .search-section select:hover {
   background-color: #f1f1f1;
-  transform: scale(1.05); 
 }
 
 .search-section select:focus {
@@ -64,18 +63,18 @@
 .search-section button {
   padding: 12px 25px;
   font-size: 16px;
-  background-color:  rgba(82, 157, 167, 0.3);
+  background-color: rgba(82, 157, 167, 0.3);
   color: black;
   border: 2px solid #ccc;
   border-color: #007bff; 
   border-radius: 25px;
   cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.3s ease;
+  transition: background-color 0.3s ease;
+  margin-top: 10px; /* Add spacing between the button and input */
 }
 
 .search-section button:hover {
   background-color: rgba(82, 157, 167, 0.3);
-  transform: scale(1.05); 
 }
 
 .search-section button:focus {
